# polydural

./: Cargo.toml  build.rs  logo_test_1.kra  logo_test_2.kra  notes.txt
assets/biomes/: deciduous_forest.json  plain_grasslands.json  semi_arid_steppe.json  subtropical_desert.json
assets/models/blocks/: cactus.json  dirt.json  flower_spike_1.json  grass.json  grass_1.json  grass_2.json  grass_3.json  oak_glass.json  oak_leave_bush.json  oak_leaves.json  oak_log.json  sand.json  sand_1.json  sand_2.json  snow.json  stone.json  stone_cobbled.json  test.json
assets/models/shapes/: grass.json  leaves.json  pillar.json  slab.json
assets/structures/: cactus_1.json  cactus_2.json  grass_patch_1.json  grass_patch_2.json  grass_patch_5.json  oak.json  spruce_2.json  spruce_3.json  spruce_4.json
assets/textures/gui/: gui_atlas.png-autosave.kra  gui_atlas.png~
old/assets/biomes/: plain_grasslands.json  taiga.json
old/assets/structures/: grass_patch_3.json  grass_patch_4.json  spruce_1.json
old/releases/: Polydural_0.0.1.0_x64__7f377zre0n3yy.msix  Polydural_0.0.2.0_x64__7f377zre0n3yy.msix  Polydural_0.0.3.0_x64__7f377zre0n3yy.msix  polydural.pfx
old/src/: common.rs  interact.rs  main.rs  transforms.rs  world.rs
old/wix/: main.wxs
releases/: NyanGames.Polydural.yaml  Polydural.msix
src/: chunk.rs  common.rs  config.rs  containers.rs  gui.rs  gui_shader.wgsl  interact.rs  main.rs  objects.rs  physics.rs  shader.wgsl  shader_transparent.wgsl  sounds.rs  transforms.rs  vertex_data.rs  world.rs
src/physics/: mod.rs  physics.rs
src/renderer/: render.rs
src/world/: assets.rs  biomes.rs  mod.rs  world.rs
wix/: main.wxs
(+11 files in other folders)
