[package]
name = "polydural"
version = "0.1.0"
edition = "2021"

include = ["src/**/*", "assets/**/*"]

[profile.release]
lto = true

[build-dependencies]
winres = "0.1"

[dependencies]
wgpu = "0.17"
cgmath = "0.18"
env_logger = "0.10"
futures = "0.3"
gfx-hal = "0.9"
image = "0.24"
log = "0.4"
pollster = "0.2"
winit = "0.28"
bytemuck = { version = "1.4", features = ["derive"] }
anyhow = "1.0"
rand ="0.8"
noise = "0.8"
rust-embed = "6.6.0"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"